--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,15 @@ board = uno
 framework = arduino
 lib_deps = 
 	robtillaart/AD9833@^0.4.3
-	mike-matera/ArduinoSTL@^1.3.3
 	SPI
+	mike-matera/ArduinoSTL@^1.3.3
+	ivanseidel/ArduinoThread@^2.1.1
+
+[env:d1_r32]
+platform = espressif32
+board = wemos_d1_uno32
+framework = arduino
+lib_deps = 
+	robtillaart/AD9833@^0.4.3
+	SPI	
 	ivanseidel/ArduinoThread@^2.1.1
