First step to refactoring wobbnulartor

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ board = uno
 framework = arduino
 lib_deps = 
 	robtillaart/AD9833@^0.4.3
+	robtillaart/MCP4725@^0.4.0
 	SPI
 	mike-matera/ArduinoSTL@^1.3.3
 	ivanseidel/ArduinoThread@^2.1.1
@@ -24,6 +25,6 @@ board = wemos_d1_uno32
 framework = arduino
 lib_deps = 
 	robtillaart/AD9833@^0.4.3
-	SPI	
+	SPI
 	ivanseidel/ArduinoThread@^2.1.1
 build_flags = -DUSE_ESP32=1
