--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ lib_deps =
 	SPI
 	mike-matera/ArduinoSTL@^1.3.3
 	ivanseidel/ArduinoThread@^2.1.1
+	hedrahexon/X9C103S@^1.3.0
 
 [env:d1_r32]
 platform = espressif32
@@ -27,4 +28,5 @@ lib_deps =
 	robtillaart/AD9833@^0.4.3
 	SPI
 	ivanseidel/ArduinoThread@^2.1.1
+	hedrahexon/X9C103S@^1.3.0
 build_flags = -DUSE_ESP32=1
